pkglib_LIBRARIES = libo2d-common.a
libo2d_common_a_SOURCES = ConstListIterator.cpp Database.h Database.cpp Entity.h Entity.cpp \
		EntityArchetype.h EntityArchetype.cpp EntityBlitter.h EntityBlitter.cpp \
		Exception.h Exception.cpp Image.h Image.cpp ImageLoader.h ImageLoader.cpp \
		Map.h Map.cpp Palette.h Palette.cpp Script.h Script.cpp ScriptAction.h ScriptAction.cpp \
		ScriptEntry.h ScriptEntry.cpp ScriptField.h ScriptField.cpp Texture.h Texture.cpp \
		Tile.h Tile.cpp TileBlitter.h TileBlitter.cpp
libo2d_common_a_CPPFLAGS = `pkg-config libxml++-2.6 --cflags`
